  settings that are currently the default:
  `-alias-deps`, `-app-funct`, `-no-keep-docs`, `-no-keep-locs`,
  `-no-principal`, `-no-rectypes`, `-no-strict-formats`
  (Demi Obenour)

- GPR#545: use reraise to preserve backtrace on
  `match .. with exception e -> raise e`
  (Nicolas Ojeda Bar, review by Gabriel Scherer)

### Runtime system:

- PR#3612, PR#92: allow allocating custom block with finalizers
  in the minor heap.
  (Pierre Chambart)

* PR#6517: use ISO C99 types {,u}int{32,64}_t in preference to our homegrown
  types {,u}int{32,64}.
  C stubs may have to be updated as {,u}int{32,64}_t are not defined anymore.
  (Xavier Leroy)

- PR#6760: closures evaluated in the toplevel can now be marshalled
  (whitequark, review by Jacques-Henri Jourdan)

- PR#6902, GPR#210: emit a runtime warning on stderr
  when finalizing an I/O channel which is still open:
    "channel opened on file '...' dies without being closed"
  this is controlled by OCAMLRUNPARAM=W=1 or with Sys.enable_runtime_warnings.
  The behavior of affected program is not changed,
  but they should still be fixed.
  (Alain Frisch, review by Damien Doligez)

- Signal handling: for read-and-clear, use GCC/Clang atomic builtins
  if available.
  (Xavier Leroy)

- PR#6910, GPR#224: marshaling (output_value, input_value, et al)
  now support marshaled data bigger than 4 Gb.
  (Xavier Leroy)

* GPR#226: select higher levels of optimization for GCC >= 3.4 and Clang
  when compiling the run-time system and C stub code.
  "-std=gnu99 -O2 -fno-strict-aliasing -fwrapv" is used by default.
  This also affects default flags for user stubs compiled with "ocamlc -c foo.c"
  and may uncover bugs in them.
  (Xavier Leroy)

- GPR#262: Multiple GC roots per compilation unit
  (Pierre Chambart, Mark Shinwell, review by Damien Doligez)

* GPR#297: Several changes to improve the worst-case GC pause time.
  Changes Gc.control and Gc.major_slice and adds functions to the Gc module.