@@ -19,11 +19,11 @@ external length : bytes -> int = "%bytes_length"
 external string_length : string -> int = "%string_length"
 external get : bytes -> int -> char = "%bytes_safe_get"
 external set : bytes -> int -> char -> unit = "%bytes_safe_set"
-external create : int -> bytes = "caml_create_string"
+external create : int -> bytes = "caml_create_bytes"
 external unsafe_get : bytes -> int -> char = "%bytes_unsafe_get"
 external unsafe_set : bytes -> int -> char -> unit = "%bytes_unsafe_set"
 external unsafe_fill : bytes -> int -> int -> char -> unit
-                     = "caml_fill_string" [@@noalloc]
+                     = "caml_fill_bytes" [@@noalloc]
 external unsafe_to_string : bytes -> string = "%bytes_to_string"
 external unsafe_of_string : string -> bytes = "%bytes_of_string"
 
