@@ -377,6 +377,11 @@ OCaml 4.03.0 (25 Apr 2016):
 
 ### Runtime system:
 
+* GPR#442, caml_fill_string, and caml_create_string is deprecated 
+  and will be removed in the future, please use caml_fill_bytes 
+  and caml_create_bytes for migration 
+  (Hongbo Zhang)
+
 - PR#3612, PR#92: allow allocating custom block with finalizers
   in the minor heap.
   (Pierre Chambart)
@@ -421,6 +426,7 @@ OCaml 4.03.0 (25 Apr 2016):
 
 - GPR#325: Add v=0x400 flag to OCAMLRUNPARAM to display GC stats on exit
   (Louis Gesbert, review by Alain Frisch)
+
 
 ### Standard library:
 
